--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,23 +1,25 @@
 // Anzahl Services
-@services: 15;  //max number of columns
+@import "services/combined";
+@import "services/more";
+@import "services/facebooklike";
+@import "services/googleplusplus";
+@import "services/print";
+@import "services/info";
+/*@services: 15;  //max number of columns
 
 @import "services/facebook";
 @import "services/googleplus";
-@import "services/info";
 @import "services/linkedin";
-@import "services/mail";
 @import "services/pinterest";
 @import "services/twitter";
 @import "services/whatsapp";
 @import "services/xing";
 @import "services/tumblr";
-@import "services/googleplusplus";
-@import "services/print";
 @import "services/flattr";
-@import "services/facebooklike";
 @import "services/reddit";
 @import "services/stumbleupon";
 @import "services/bitcoin";
 @import "services/diaspora";
 @import "services/addthis";
-@import "services/more";
+@import "services/mail";
+*/
