--- a/src/style/services/combined.less
+++ b/src/style/services/combined.less
@@ -17,7 +17,7 @@ twitter #55acee lighten(#55acee, @lighten) darken(#55acee, @darken) lighten(#55a
 whatsapp #5cbe4a lighten(#5cbe4a, @lighten) darken(#5cbe4a, @darken) lighten(#5cbe4a, @lighten_bg) whatsapp 22px,
 xing #126567 lighten(#126567, @lighten) darken(#126567, @darken) lighten(#126567, @lighten_bg) xing 19px;
 
-@services: lenght(@service) + 5;
+@services: (length(@service) + 3);
 
 .shariff {
 	.loop-service();
