config fontpath, fixes

--- a/src/style/services/combined.less
+++ b/src/style/services/combined.less
@@ -22,7 +22,7 @@
 					border-color: @col-h;
 				}
 			}
-			.fa-@{symbol} {
+			.fa-@{name} {
 				font-size: @size;
 				&:before { 
 					content: ~'"@{fa-var-@{symbol}}"';
