--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -1,6 +1,6 @@
 .shariff {
     .facebooklike {
-        .fa-facebooklike {
+        .fa-facebook {
 			@media (max-width: 550px) {
 				&:before { content: @fa-var-thumbs-o-up; }
 			}
@@ -13,7 +13,7 @@
 		}
    }
 	.theme-circle-color, .theme-circle-white, .theme-circle-grey {
-        .fa-facebooklike:before {
+        .fa-facebook:before {
 			content: @fa-var-thumbs-o-up;
 		}
 	}
