--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -96,10 +96,8 @@
 	.theme-white li a {
 		background-color: #fff;
 		border: 1px solid #ddd;
-		&:hover {
+		&:hover, &:focus {
 			background-color: #efefef;
-		}
-		&:hover {
 			border: 1px solid #ddd;
 		}
 		span {
@@ -142,7 +140,7 @@
 		li a {
 			background-color: #fff;
 			border: 1px solid #999;
-			&:hover {
+			&:hover, &:focus {
 				background-color: #efefef;
 				border-color: #999;
 			}
@@ -155,7 +153,7 @@
 		span {
 			color: #888;
 		}
-		&:hover span {
+		&:hover span, &:focus span {
 			color: #fff;
 		}
 	}
