--- a/src/style/services/info.less
+++ b/src/style/services/info.less
@@ -3,7 +3,7 @@
         a {
             background-color: #fff;
 			border: 1px solid #ccc;
-            &:hover {
+            &:hover, &:focus {
                 background-color: #efefef;
             }
 			span {
@@ -17,7 +17,7 @@
     }
     .theme-grey, .theme-circle-grey {
         .info a {
-            &:hover {
+            &:hover, &:focus {
                 background-color: #828282;
 				border-color: #828282;
             }
