--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -13,7 +13,7 @@
 		}
    }
 	.theme-circle-color, .theme-circle-white, .theme-circle-grey {
-        .fa-facebook:before {
+        .facebooklike .fa-facebook:before {
 			content: @fa-var-thumbs-o-up;
 		}
 	}
