--- a/src/style/shariff-complete.less
+++ b/src/style/shariff-complete.less
@@ -1,8 +1,10 @@
 // Font-Awesome
 @import "variables";
-@import "path";
-@import "core";
+@fa-font-path: "https://netdna.bootstrapcdn.com/font-awesome/4.4.0/fonts";
+/*@import "path";
+@import "core";*/
 
 // Shariff
+@import "shariff-font";
 @import "shariff-layout";
 @import "shariff-services";
